[gd_scene load_steps=5 format=3 uid="uid://bu65lpj0avvyn"]

[ext_resource type="Script" path="res://scripts/references/CreatePortrait.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://br43d1hbfcwjg" path="res://Sprites/Icons/cursor_down.png" id="2"]
[ext_resource type="Texture2D" uid="uid://brjdw528254i0" path="res://Sprites/Icons/upload.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bmf46iae6ulik" path="res://Sprites/Icons/card_outline_place.png" id="4"]

[node name="CreatePortrait" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
_PopUpWin = NodePath("FileDialog")
_PopUpSaveWin = NodePath("FileDialog2")
_MainImage = NodePath("ColorRect/TextureRect3")
_CroppedImage = NodePath("TextureRect")
_Border = NodePath("ReferenceRect")
_ButtonTL = NodePath("ReferenceRect/TL")
_ButtonTR = NodePath("ReferenceRect/TR")
_ButtonDL = NodePath("ReferenceRect/DL")
_ButtonDR = NodePath("ReferenceRect/DR")

[node name="ColorRect" type="ColorRect" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.164706, 0.196078, 1)

[node name="TextureRect3" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 989.0
offset_right = 319.0
offset_bottom = 1389.0
expand_mode = 1
stretch_mode = 7

[node name="Load" type="Button" parent="."]
layout_mode = 0
offset_left = 291.0
offset_top = 819.0
offset_right = 403.0
offset_bottom = 925.0
size_flags_horizontal = 6
size_flags_vertical = 6
icon = ExtResource("3")

[node name="Load2" type="Button" parent="."]
layout_mode = 0
offset_left = 787.0
offset_top = 959.0
offset_right = 899.0
offset_bottom = 1065.0
size_flags_horizontal = 6
size_flags_vertical = 6
icon = ExtResource("3")

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_left = 527.0
offset_top = 821.0
offset_right = 639.0
offset_bottom = 927.0
icon = ExtResource("4")

[node name="Save2" type="Button" parent="."]
layout_mode = 0
offset_left = 787.0
offset_top = 825.0
offset_right = 899.0
offset_bottom = 931.0
icon = ExtResource("4")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
custom_minimum_size = Vector2(100, 132)
layout_mode = 0
offset_left = 270.0
offset_top = 144.0
offset_right = 570.0
offset_bottom = 544.0
border_color = Color(0.501961, 0.501961, 0.501961, 1)
editor_only = false

[node name="TL" type="TextureButton" parent="ReferenceRect"]
layout_mode = 0
offset_left = -100.0
offset_top = -100.0
pivot_offset = Vector2(200, 200)
texture_normal = ExtResource("2")
stretch_mode = 5

[node name="DL" type="TextureButton" parent="ReferenceRect"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_bottom = 100.0
pivot_offset = Vector2(100, 0)
texture_normal = ExtResource("2")
stretch_mode = 5

[node name="DR" type="TextureButton" parent="ReferenceRect"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 100.0
offset_bottom = 100.0
texture_normal = ExtResource("2")
stretch_mode = 5

[node name="TR" type="TextureButton" parent="ReferenceRect"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_top = -100.0
offset_right = 100.0
pivot_offset = Vector2(100, 200)
texture_normal = ExtResource("2")
stretch_mode = 5

[node name="FileDialog" type="FileDialog" parent="."]
access = 2
filters = PackedStringArray("*.png", "*.jpg")
show_hidden_files = true

[node name="FileDialog2" type="FileDialog" parent="."]
access = 2
filters = PackedStringArray("*.png")
show_hidden_files = true

[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Load2" to="." method="_on_Load2_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Save2" to="." method="_on_Save2_pressed"]
[connection signal="button_down" from="ReferenceRect/TL" to="." method="_on_TL_button_down"]
[connection signal="button_up" from="ReferenceRect/TL" to="." method="ResizeOff"]
[connection signal="button_down" from="ReferenceRect/DL" to="." method="_on_DL_button_down"]
[connection signal="button_up" from="ReferenceRect/DL" to="." method="ResizeOff"]
[connection signal="button_down" from="ReferenceRect/DR" to="." method="_on_DR_button_down"]
[connection signal="button_up" from="ReferenceRect/DR" to="." method="ResizeOff"]
[connection signal="button_down" from="ReferenceRect/TR" to="." method="_on_TR_button_down"]
[connection signal="button_up" from="ReferenceRect/TR" to="." method="ResizeOff"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog2" to="." method="_on_FileDialog2_file_selected"]
